@@ -1,10 +1,12 @@
 package com.alkemy.wallet.services.transaction.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import com.alkemy.wallet.dto.DepositDTO;
+import com.alkemy.wallet.mapper.DepositMapper;
 import com.alkemy.wallet.models.account.Account;
 import com.alkemy.wallet.models.transaction.Deposit;
 import com.alkemy.wallet.models.transaction.TransactionMethodEnum;
@@ -13,19 +15,15 @@ import com.alkemy.wallet.repository.transaction.DepositRepository;
 import com.alkemy.wallet.services.transaction.DepositService;
 
 import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 
 @Service
-public class DepositServiceImpl extends TransactionServiceImpl<Deposit> implements DepositService { // Implementa
-                                                                                                    // DepositService
-    @Autowired
-    private AccountRepository accountRepository;
+@RequiredArgsConstructor
+public class DepositServiceImpl implements DepositService {
 
+    private final AccountRepository accountRepository;
     private final DepositRepository depositRepository;
-
-    public DepositServiceImpl(DepositRepository depositRepository) {
-        super(depositRepository); // pasa al TransactionServiceImpl
-        this.depositRepository = depositRepository;
-    }
+    private final DepositMapper depositMapper;
 
     // Método para obtener depósitos por método de transacción
     // Se utiliza el método valueOf para convertir el string a un enum
@@ -33,14 +31,16 @@ public class DepositServiceImpl extends TransactionServiceImpl<Deposit> implemen
     // Si el método no es válido, se lanza una IllegalArgumentException
     // Si no se encuentran depósitos, se lanza una EntityNotFoundException
     @Override
-    public List<Deposit> getByMethod(String method) {
+    public List<DepositDTO> getByMethod(String method) {
         try {
             TransactionMethodEnum methodEnum = TransactionMethodEnum.valueOf(method.toUpperCase());
             List<Deposit> deposits = depositRepository.findByMethod(methodEnum);
             if (deposits.isEmpty()) {
                 throw new EntityNotFoundException("No se encontraron depósitos con el método: " + method);
             }
-            return deposits;
+            return deposits.stream()
+                    .map(depositMapper::toDTO)
+                    .collect(Collectors.toList());
         } catch (IllegalArgumentException e) {
             throw new IllegalArgumentException("Método de transacción inválido: " + method);
         }
@@ -52,23 +52,27 @@ public class DepositServiceImpl extends TransactionServiceImpl<Deposit> implemen
     // Si no se encuentran depósitos, se lanza una EntityNotFoundException
 
     @Override
-    public List<Deposit> getBySourceEntity(String entity) {
+    public List<DepositDTO> getBySourceEntity(String entity) {
         List<Deposit> deposits = depositRepository.findBySourceEntityContainingIgnoreCase(entity);
         if (deposits.isEmpty()) {
             throw new EntityNotFoundException("No se encontraron depósitos con entidad de origen: " + entity);
         }
-        return deposits;
+        return deposits.stream()
+                .map(depositMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     // Método para obtener depósitos por ID de usuario
     // Se utiliza el método findAll para obtener todos los depósitos y luego se
     // filtran por ID de usuario
     // Si no se encuentran depósitos, se lanza una EntityNotFoundException
+
     @Override
-    public List<Deposit> getByUserId(int userId) {
-        List<Deposit> deposits = depositRepository.findAll().stream()
+    public List<DepositDTO> getByUserId(int userId) {
+        List<DepositDTO> deposits = depositRepository.findAll().stream()
                 .filter(deposit -> deposit.getAccount().getUser().getId() == userId)
-                .toList();
+                .map(depositMapper::toDTO)
+                .collect(Collectors.toList());
 
         if (deposits.isEmpty()) {
             throw new EntityNotFoundException("No se encontraron depósitos para el usuario con ID: " + userId);
@@ -78,20 +82,24 @@ public class DepositServiceImpl extends TransactionServiceImpl<Deposit> implemen
     }
 
     @Override
-    public Deposit save(Deposit deposit) {
-        Account account = deposit.getAccount();
+    public DepositDTO save(DepositDTO depositDTO) {
+        // Buscar cuenta por ID
+        Account account = accountRepository.findById(depositDTO.getAccountId())
+                .orElseThrow(
+                        () -> new EntityNotFoundException("Cuenta no encontrada con ID: " + depositDTO.getAccountId()));
 
-        // Verificamos que exista la cuenta
-        Account existingAccount = accountRepository.findById(account.getId())
-                .orElseThrow(() -> new EntityNotFoundException("Cuenta no encontrada con ID: " + account.getId()));
+        // Convertir DTO a entidad
+        Deposit deposit = depositMapper.toEntity(depositDTO);
+        deposit.setAccount(account); // Asignar la cuenta recuperada
 
-        // Actualiza el saldo
-        double nuevoSaldo = existingAccount.getBalance() + deposit.getTransactionAmount();
-        existingAccount.setBalance(nuevoSaldo);
-        accountRepository.save(existingAccount);
+        // Actualizar saldo
+        double nuevoSaldo = account.getBalance() + deposit.getTransactionAmount();
+        account.setBalance(nuevoSaldo);
+        accountRepository.save(account);
 
-        // Guarda el depósito
-        return super.save(deposit);
+        // Guardar depósito y retornar el DTO correspondiente
+        Deposit savedDeposit = depositRepository.save(deposit);
+        return depositMapper.toDTO(savedDeposit);
     }
 
 }
